# insightflow

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: guard_expensive_runs.py  hooks.json
.github/workflows/: ci.yml
commands/: insightflow-next.md  insightflow-readiness.md  insightflow-setup.md  insightflow-writeup.md
configs/: claims.yaml  experiments.yaml  policy.yaml
docs/: agent_driven_project.md  agent_workflow.md  architecture.md  concepts.md  evaluation.md  examples.md  install_and_use.md  limitations.md  paper_positioning.md  real_data_evaluation.md  related_work.md  roadmap.md  scheduling_policy.md  wandb.md
eval/: AGENT_STUDY.md  agent_env.py  agent_study.py  wandb_to_replay.py
eval/agent_harness/: README.md  make_sandbox.py
examples/: train_stub.py  wandb_import_example.md
examples/gfa_vs_lora_real/: README.md  runs.csv
examples/muon_bbob_real/: README.md  runs.csv
examples/replay_example/: README.md  runs.csv
examples/toy_project/: README.md  claims.yaml  resources.yaml
paper/: claims.md  draft.md  outline.md
prompts/: autonomous_research_loop.md  claude_research_agent_prompt.md  replanning_prompt.md  review_plan_prompt.md
scripts/: calibration.py  dev_check.sh
skills/interpret-results/: SKILL.md
skills/writeup-from-ledger/: SKILL.md
specs/: ACCEPTANCE_TESTS.md  ARCHITECTURE_SPEC.md  CLAUDE_USAGE_INSTRUCTIONS.md  MASTER_PROMPT_FOR_CLAUDE_CODE.md  PRODUCT_SPEC.md  REAL_PROJECT_ADAPTATION_PROMPT.md  SECOND_PASS_REVIEW_PROMPT.md
src/insightflow/: __init__.py  actions.py  bayes.py  benchmark.py  calibration.py  cli.py  config.py  curves.py  demo.py  errors.py  explain.py  importers.py  launcher.py  ledger.py  mcp_server.py  partial.py  readiness.py  replay.py  reports.py  scheduler.py  schemas.py  scoring.py  seed_policy.py  simulator.py  (+2 more)
tests/: conftest.py  test_actions.py  test_agent_env.py  test_bayes.py  test_benchmark.py  test_cli_smoke.py  test_curves.py  test_importers.py  test_launcher.py  test_ledger.py  test_mcp_server.py  test_partial.py  test_readiness.py  test_replay.py  test_scheduler.py  test_schemas.py  test_scoring.py  test_seed_policy.py  test_simulator.py  test_wandb_adapter.py  test_wandb_importer.py
(+8 files in other folders)
